Proposal Budget printing and Schema changes