@@ -4,7 +4,7 @@
     <artifactId>kc-printing-xsds</artifactId>
     <packaging>jar</packaging>
     <name>KC Project. Printing schema compiler</name>
-    <version>1.1</version>
+    <version>1.3</version>
     <url>http://kuali.org</url>
     <build>
         <plugins>
@@ -21,7 +21,10 @@
                     </execution>
                 </executions>
                 <configuration>
+                	<argLine>-Xmx1536m -XX:MaxPermSize=512m</argLine>
                     <schemaDirectory>printing</schemaDirectory>
+                    <memoryInitialSize>1536m</memoryInitialSize>
+                    <memoryMaximumSize>1536m</memoryMaximumSize>
                     <download>false</download>
                     <sourceGenerationDirectory>target/generated/xmlbeans</sourceGenerationDirectory>
                     <verbose>true</verbose>
@@ -30,11 +33,11 @@
         </plugins>
     </build>
     <dependencies>
-	<dependency>                    
+	<!--<dependency>                    
 		<groupId>org.kuali.kra.s2s</groupId>                    
 		<artifactId>MetaGrantApplication</artifactId>
 		<version>0.9.2-SNAPSHOT</version>                
-	</dependency>
+	</dependency>-->
         <dependency>
             <groupId>xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
